[package]
name = "pk11-uri-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
A zero-copy library to parse and validate PKCS#11 URIs in accordance to RFC7512 specifications.
"""
repository = "https://github.com/andrewoswald/pk11-uri-parser"
readme = "README.md"
keywords = ["pkcs11", "cryptography", "certificate", "x509", "hsm"]
categories = ["authentication", "config", "cryptography", "parser-implementations"]

[dependencies]
once_cell = "1.20.2"
regex = "1.11.0"
